
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int O_CREAT ;
 int O_RDWR ;
 int WriteDescriptor (int,int) ;
 int close (int) ;
 char** filenames ;
 int open (char*,int,int) ;
 int printf (char*,int) ;

void parent(int sock) {
  int f = 0;
  while(1) {
    char* filename = filenames[f];
    f++;
    f %= 10;
    int to_send = open(filename, O_CREAT|O_RDWR, 0644);

    int err = WriteDescriptor(sock, to_send);
    printf("err: %x\n", err);

    close(to_send);
  }
}
