; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_42054.c_parent.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_42054.c_parent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@filenames = common dso_local global i8** null, align 8
@O_CREAT = common dso_local global i32 0, align 4
@O_RDWR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"err: %x\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @parent(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  br label %7

7:                                                ; preds = %1, %7
  %8 = load i8**, i8*** @filenames, align 8
  %9 = load i32, i32* %3, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds i8*, i8** %8, i64 %10
  %12 = load i8*, i8** %11, align 8
  store i8* %12, i8** %4, align 8
  %13 = load i32, i32* %3, align 4
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* %3, align 4
  %15 = load i32, i32* %3, align 4
  %16 = srem i32 %15, 10
  store i32 %16, i32* %3, align 4
  %17 = load i8*, i8** %4, align 8
  %18 = load i32, i32* @O_CREAT, align 4
  %19 = load i32, i32* @O_RDWR, align 4
  %20 = or i32 %18, %19
  %21 = call i32 @open(i8* %17, i32 %20, i32 420)
  store i32 %21, i32* %5, align 4
  %22 = load i32, i32* %2, align 4
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @WriteDescriptor(i32 %22, i32 %23)
  store i32 %24, i32* %6, align 4
  %25 = load i32, i32* %6, align 4
  %26 = call i32 @printf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %25)
  %27 = load i32, i32* %5, align 4
  %28 = call i32 @close(i32 %27)
  br label %7
}

declare dso_local i32 @open(i8*, i32, i32) #1

declare dso_local i32 @WriteDescriptor(i32, i32) #1

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
